[gd_scene load_steps=4 format=3 uid="uid://bbrcv1ycfye4u"]

[ext_resource type="Script" uid="uid://cmrc48jmp21pf" path="res://UI/main_menu.gd" id="1_71kaw"]
[ext_resource type="PackedScene" uid="uid://bfpyyxl3pptin" path="res://UI/button.tscn" id="1_h5rxw"]

[sub_resource type="Theme" id="Theme_tk8dj"]
default_font_size = 50
Button/font_sizes/font_size = 16

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_71kaw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.160784, 0.223529, 0.313726, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 1289.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 64
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 333.0
offset_right = 1281.0
offset_bottom = 718.0
theme = SubResource("Theme_tk8dj")

[node name="PrimaryMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50

[node name="Play" parent="CenterContainer/PrimaryMenu" instance=ExtResource("1_h5rxw")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play"
script = null

[node name="Settings" parent="CenterContainer/PrimaryMenu" instance=ExtResource("1_h5rxw")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"
script = null

[node name="Exit" parent="CenterContainer/PrimaryMenu" instance=ExtResource("1_h5rxw")]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit"
script = null

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Fullscreen" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Fullscreen"

[node name="MainVolume" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="MainVolumeLabel" type="Label" parent="CenterContainer/SettingsMenu/MainVolume"]
custom_minimum_size = Vector2(100, 34)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -64.0
offset_right = 163.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Main Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/SettingsMenu/MusicVolume"]
custom_minimum_size = Vector2(100, 34)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -64.0
offset_right = 163.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Music Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="SFXVolumeLabel" type="Label" parent="CenterContainer/SettingsMenu/SFXVolume"]
custom_minimum_size = Vector2(100, 34)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -64.0
offset_right = 163.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "SFX Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" parent="CenterContainer/SettingsMenu" instance=ExtResource("1_h5rxw")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Back"
script = null

[connection signal="button_down" from="CenterContainer/PrimaryMenu/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="CenterContainer/PrimaryMenu/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="CenterContainer/PrimaryMenu/Exit" to="." method="_on_exit_button_down"]
[connection signal="toggled" from="CenterContainer/SettingsMenu/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/MainVolume" to="." method="_on_main_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="button_down" from="CenterContainer/SettingsMenu/Back" to="." method="_on_back_button_down"]
